tests/outref/TCV012_errors.ref

-- Create view
create view v1 as select 1;
-- Drop view
drop view v1;
-- Attempt to select on v1 should fail
select * from v1;

-- Attempt to drop a view which doesn't exist
drop view v1;
drop view if exists v1;

-- Create views
create view v1 as select 1;
create view v2 as select 1;
-- Attempt to select from the view to check that it is actually created
select * from v1;
select * from v2;
-- Test that drop view on both can be done using a single statement
drop view v1, v2;
-- Attempt to select on both should fail
select * from v1;
select * from v2;

-- Edge case with drop view
-- Create view
create view v1 as select 1;
-- Attempt to select from the view to check that it is actually created
select * from v1;
-- Following drop is intensionally attempted with a non-existant view along with an existant view.
-- We want to verify that if drop of the non-existant view results in an error then the existant view
--   is also not dropped i.e. if there is an error with the drop statement it doesn't go through for any its parameters.
drop view v1,v2;
-- Above statement should have an error as shown below
-- ERROR:  view "v2" does not exist
-- The below select will succeed as v1 is not dropped by the previous statement.
select * from v1;
-- Verify that the same is true irrespective of the position in drop view list
drop view v2,v1;
-- Above statement should have an error as shown below
-- ERROR:  view "v2" does not exist
-- The below select will succeed as v1 is not dropped by the previous statement.
select * from v1;

drop view v1;
drop view v2;
-- Drop View on a table
create table test (id integer);
drop view test;
drop view if exists test;
drop table test;
-- Drop Table on a view
create view v1 as select 1;
drop table v1;
drop table if exists v1;
OCTO> create view v1 as select 1;
CREATE VIEW
OCTO> drop view v1;
DROP VIEW
[ERROR]: ERR_UNKNOWN_TABLE_OR_VIEW: Unknown table or view: v1
LINE 4:1: select * from v1;
                        ^^
OCTO> select * from v1;
OCTO> drop view v1;
[ERROR]: ERR_CANNOT_DROP_VIEW: Cannot DROP view "v1" as it does not exist
OCTO> drop view if exists v1;
DROP VIEW
OCTO> create view v1 as select 1;
CREATE VIEW
OCTO> create view v2 as select 1;
CREATE VIEW
OCTO> select * from v1;
???
1
(1 row)
OCTO> select * from v2;
???
1
(1 row)
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected COMMA, expecting SEMICOLON or ENDOFFILE
LINE 13:1: drop view v1, v2;
                       ^
OCTO> drop view v1, v2;
OCTO> select * from v1;
???
1
(1 row)
OCTO> select * from v2;
???
1
(1 row)
OCTO> create view v1 as select 1;
[ERROR]: ERR_CANNOT_CREATE_VIEW: View or Table "v1" already exists
OCTO> select * from v1;
???
1
(1 row)
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected COMMA, expecting SEMICOLON or ENDOFFILE
LINE 19:1: drop view v1,v2;
                       ^
OCTO> drop view v1,v2;
OCTO> select * from v1;
???
1
(1 row)
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected COMMA, expecting SEMICOLON or ENDOFFILE
LINE 21:1: drop view v2,v1;
                       ^
OCTO> drop view v2,v1;
OCTO> select * from v1;
???
1
(1 row)
OCTO> drop view v1;
DROP VIEW
OCTO> drop view v2;
DROP VIEW
OCTO> create table test (id integer);
CREATE TABLE
OCTO> drop view test;
[ERROR]: ERR_WRONG_TYPE: "test" is not a VIEW
OCTO> drop view if exists test;
[ERROR]: ERR_WRONG_TYPE: "test" is not a VIEW
OCTO> drop table test;
DROP TABLE
OCTO> create view v1 as select 1;
CREATE VIEW
OCTO> drop table v1;
[ERROR]: ERR_WRONG_TYPE: "v1" is not a TABLE
OCTO> drop table if exists v1;
[ERROR]: ERR_WRONG_TYPE: "v1" is not a TABLE
OCTO> 
